syntax = "proto3";

package basic;

option go_package = "course/proto/basic";

message Integer {
  int32 id = 1;
}

message IntegerList {
  repeated int32 ids = 1;
}

message String {
  string str = 1;
}

message StringList {
  repeated string rows = 1;
}

message Boolean {
  bool is = 1;
}