syntax = "proto3";

package user;

option go_package="gitee.com/jingshanccc/course/user/proto/dto";

message UserDto{
  string id = 1;
  string name = 2;
  string login_name = 3;
  string phone = 4;
  string email = 5;
  string avatar_name = 6;
  string avatar_path = 7;
  string gender = 8;
  bool is_admin = 9;
  string create_by = 10;
  string create_time = 11;
  string update_by = 12;
  string update_time = 13;
  string roles = 14;
  repeated string permissions = 15;
}

message PageDto{
  int64 page = 1;
  int64 size = 2;
  repeated string sort = 3;
  string blurry = 4;
  repeated string createTime = 5;
  int64 total = 6;
  repeated UserDto rows = 7;
}

message LoginUserDto{
  string id = 1;
  string login_name = 2;
  string name = 3;
  string token = 4;
  string password = 5;
}

message UpdatePass {
  string oldPass = 1;
  string newPass = 2;
  string userId = 3;
}

message UpdateEmail {
  string pass = 1;
  string email = 2;
  string code = 3;
  string userId = 4;
}